# dim-mod-sim

./: PLAN.md  README.md  pyproject.toml
output/: description.md  events.json  scaffold.json  shop_config.json
src/dim_mod_sim/: __init__.py  cli.py
src/dim_mod_sim/core/: __init__.py  random.py
src/dim_mod_sim/description/: __init__.py  generator.py  prose.py
src/dim_mod_sim/description/templates/: customers.j2  inventory.j2  products.j2  promotions.j2  returns.j2  shop.j2  stores.j2  time_semantics.j2  transactions.j2
src/dim_mod_sim/evaluator/: __init__.py  engine.py  feedback.py  result.py
src/dim_mod_sim/evaluator/axes/: __init__.py  base.py  event_preservation.py  grain_correctness.py  queryability.py  semantic_faithfulness.py  structural_optimality.py  temporal_correctness.py
src/dim_mod_sim/events/: __init__.py  generator.py  models.py  state.py
src/dim_mod_sim/events/emitters/: __init__.py  base.py  inventory.py  returns.py  sales.py  voids.py
src/dim_mod_sim/explain/: __init__.py  analyzer.py  models.py  scenarios.py
src/dim_mod_sim/play/: __init__.py  briefing.py  framing.py  session.py
src/dim_mod_sim/progress/: __init__.py  models.py  tracker.py
src/dim_mod_sim/scaffold/: __init__.py  generator.py  models.py
src/dim_mod_sim/schema/: __init__.py  models.py  parser.py
src/dim_mod_sim/shop/: __init__.py  config.py  generator.py  options.py
src/dim_mod_sim/ui/: __init__.py  app.py
src/dim_mod_sim/ui/modals/: __init__.py  help.py  new_game.py  trap_help.py
src/dim_mod_sim/ui/screens/: __init__.py  home.py  play.py  progress.py  (+2 more)
(+6 files in other folders)
